@@ -30,16 +30,22 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
                 <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
+                    <testFailureIgnore>false</testFailureIgnore>
+                     <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
+                                <properties>
+                                   <property>
+                                      <name>listener</name>
+                                      <value>io.qameta.allure.testng</value>
+                                   </property>
+                                </properties>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/suites/regression.xml</suiteXmlFile>
+                        <suiteXmlFile>src/test/resources/regression.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <systemPropertyVariables>
                         <allure.results.directory>${basedir}/target/allure-results</allure.results.directory>
-                        <allure.link.tms.pattern>https://kwri-jira.kw.com/browse/{}</allure.link.tms.pattern>
-                        <allure.link.issue.pattern>https://kwri-jira.kw.com/browse/{}</allure.link.issue.pattern>
                     </systemPropertyVariables>
                     <reportsDirectory>${basedir}/target/test-output</reportsDirectory>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
 
@@ -212,6 +218,15 @@
                <artifactId>log4j-api</artifactId>
                <version>2.15.0</version>
              </dependency>
+
+             <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+             <dependency>
+                 <groupId>org.assertj</groupId>
+                 <artifactId>assertj-core</artifactId>
+                 <version>3.22.0</version>
+                 <scope>test</scope>
+             </dependency>
+
 
     </dependencies>
 
